@@ -1,20 +1,19 @@
 package org.jzy3d.demos.benchmark;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.SegmentAllocator;
 import java.lang.foreign.ValueLayout;
-import opengl.macos.x86.glutDisplayFunc$func;
-import opengl.macos.x86.glutIdleFunc$func;
-import opengl.macos.x86.glut_h;
+import opengl.macos.arm.glutDisplayFunc$func;
+import opengl.macos.arm.glutIdleFunc$func;
+import opengl.macos.arm.glut_h;
 
 /**
  * Paints some polygons at screen.
  */
 public class Performances_Panama_macOS {
-  private static SegmentAllocator allocator;
-  private static int              drawingCount = 0;
-  private static long             elapsedTime  = 0;
+  private static Arena arena;
+  private static int   drawingCount = 0;
+  private static long  elapsedTime  = 0;
 
   public static void display() {
     glut_h.glClearColor(0.0f, 0.0f, 0.0f, 1.0f);
@@ -24,7 +23,7 @@ public class Performances_Panama_macOS {
     glut_h.gluLookAt(0, 0, 5, 0, 0, 0, 0, 1, 0);
     long time = System.currentTimeMillis();
     int max = 400;
-    MemorySegment matrix = allocator.allocateArray(ValueLayout.JAVA_FLOAT, 
+    MemorySegment matrix = arena.allocateFrom(ValueLayout.JAVA_FLOAT, 
         new float [] {1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1});
     for (int i = 0; i < max; i++) {
       matrix.setAtIndex(ValueLayout.JAVA_FLOAT, 12, 2f * i / max - 1f);
@@ -55,16 +54,15 @@ public class Performances_Panama_macOS {
   }
 
   public static void main(String [] args) {
-    MemorySession scope = MemorySession.openImplicit();
-    allocator = SegmentAllocator.newNativeArena(scope);
-    MemorySegment argc = allocator.allocate(glut_h.C_INT, 0);
+    arena = Arena.ofConfined();
+    MemorySegment argc = arena.allocate(glut_h.C_INT, 0);
     glut_h.glutInit(argc, argc);
     glut_h.glutInitDisplayMode(glut_h.GLUT_SINGLE() | glut_h.GLUT_RGB());
     glut_h.glutInitWindowSize(800, 800);
-    glut_h.glutCreateWindow(allocator.allocateUtf8String("Panama frame"));
+    glut_h.glutCreateWindow(arena.allocateFrom("Panama frame"));
 
-    MemorySegment displayStub = glutDisplayFunc$func.allocate(Performances_Panama_macOS::display, scope);
-    MemorySegment idleStub = glutIdleFunc$func.allocate(Performances_Panama_macOS::onIdle, scope);
+    MemorySegment displayStub = glutDisplayFunc$func.allocate(Performances_Panama_macOS::display, arena);
+    MemorySegment idleStub = glutIdleFunc$func.allocate(Performances_Panama_macOS::onIdle, arena);
     glut_h.glutDisplayFunc(displayStub);
     glut_h.glutIdleFunc(idleStub);
     glut_h.glutMainLoop();
