@@ -17,30 +17,30 @@
  *******************************************************************************/
 package panamagl.platform.linux;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
-import glext.ubuntu.v20.PFNGLBINDFRAMEBUFFEREXTPROC;
-import glx.ubuntu.v20.glx_h;
-import opengl.ubuntu.v20.PFNGLBINDRENDERBUFFEREXTPROC;
-import opengl.ubuntu.v20.PFNGLCHECKFRAMEBUFFERSTATUSEXTPROC;
-import opengl.ubuntu.v20.PFNGLDELETEFRAMEBUFFERSEXTPROC;
-import opengl.ubuntu.v20.PFNGLDELETERENDERBUFFERSEXTPROC;
-import opengl.ubuntu.v20.PFNGLFRAMEBUFFERRENDERBUFFEREXTPROC;
-import opengl.ubuntu.v20.PFNGLFRAMEBUFFERTEXTURE2DEXTPROC;
-import opengl.ubuntu.v20.PFNGLGENFRAMEBUFFERSEXTPROC;
-import opengl.ubuntu.v20.PFNGLGENRENDERBUFFERSEXTPROC;
-import opengl.ubuntu.v20.PFNGLRENDERBUFFERSTORAGEEXTPROC;
-import opengl.ubuntu.v20.glut_h;
+import glx.linux.x86.glx_h;
+//import glext.linux.x86.PFNGLBINDFRAMEBUFFEREXTPROC;
+//import glext.linux.x86.PFNGLGENFRAMEBUFFERSEXTPROC;
+//import glext.linux.x86.PFNGLGENRENDERBUFFERSEXTPROC;
+import opengl.linux.x86.PFNGLBINDFRAMEBUFFEREXTPROC;
+import opengl.linux.x86.PFNGLGENFRAMEBUFFERSEXTPROC;
+import opengl.linux.x86.PFNGLGENRENDERBUFFERSEXTPROC;
+import opengl.linux.x86.PFNGLBINDRENDERBUFFEREXTPROC;
+import opengl.linux.x86.PFNGLCHECKFRAMEBUFFERSTATUSEXTPROC;
+import opengl.linux.x86.PFNGLDELETEFRAMEBUFFERSEXTPROC;
+import opengl.linux.x86.PFNGLDELETERENDERBUFFERSEXTPROC;
+import opengl.linux.x86.PFNGLFRAMEBUFFERRENDERBUFFEREXTPROC;
+import opengl.linux.x86.PFNGLFRAMEBUFFERTEXTURE2DEXTPROC;
+import opengl.linux.x86.PFNGLRENDERBUFFERSTORAGEEXTPROC;
+import opengl.linux.x86.glut_h;
 import panamagl.Debug;
 import panamagl.Image;
 import panamagl.offscreen.AFBO;
 import panamagl.offscreen.FBO;
 import panamagl.opengl.GL;
 import panamagl.opengl.GLError;
-import panamagl.utils.ForeignMemoryUtils;
-import panamagl.utils.ForeignMemoryUtils.Mode;
 
 /**
  * A frame buffer object, or {@link FBO_linux}, can render OpenGL into an offscreen buffer that can later
@@ -61,162 +61,127 @@ public class FBO_linux extends AFBO implements FBO {
   protected int border = 0;
   protected int channels = 4; // RGBA
 
-  // formats
-  protected int format = -1;
-  protected int internalFormat = -1;
-  protected int textureType = -1;
-
-  protected boolean debug = Debug.check(FBO.class, FBO_linux.class);
-
   // supposed to copy to BufferedImage faster when true
   // using false allows to make copy by tweaking bytes
   // which is useful for debugging
   protected boolean arrayExport = true;
 
-  protected int idTexture = -1;
-  protected int idFrameBuffer = -1;
-  protected int idRenderBuffer = -1;
-  
-  protected MemorySession scope;
-  protected MemorySegment frameBufferIds;
-  protected MemorySegment renderBufferIds;
-  protected MemorySegment textureBufferIds;
-  protected MemorySegment pixelBuffer;
-  
+  /** Memory arena to load OpenGL extension. Will live until this class dies. */
+  protected Arena classArena;
+    
   // dynamically loaded OpenGL functions
-  protected ForeignMemoryUtils ffm;
   
-  protected PFNGLGENFRAMEBUFFERSEXTPROC glGenFramebuffers;
-  protected PFNGLBINDFRAMEBUFFEREXTPROC glBindFramebuffer;
-  protected PFNGLFRAMEBUFFERTEXTURE2DEXTPROC glFramebufferTexture2D;
+  protected MemorySegment glGenFramebuffers;
+  protected MemorySegment glBindFramebuffer;
+  protected MemorySegment glFramebufferTexture2D;
 
-  protected PFNGLGENRENDERBUFFERSEXTPROC glGenRenderbuffers;
-  protected PFNGLBINDRENDERBUFFEREXTPROC glBindRenderbuffer;
-  protected PFNGLRENDERBUFFERSTORAGEEXTPROC glRenderbufferStorage;
+  protected MemorySegment glGenRenderbuffers;
+  protected MemorySegment glBindRenderbuffer;
+  protected MemorySegment glRenderbufferStorage;
   
-  protected PFNGLFRAMEBUFFERRENDERBUFFEREXTPROC glFramebufferRenderbuffer;
-  protected PFNGLCHECKFRAMEBUFFERSTATUSEXTPROC glCheckFramebufferStatus;
+  protected MemorySegment glFramebufferRenderbuffer;
+  protected MemorySegment glCheckFramebufferStatus;
   
-  protected PFNGLDELETERENDERBUFFERSEXTPROC glDeleteRenderbuffers;
-  protected PFNGLDELETEFRAMEBUFFERSEXTPROC glDeleteFramebuffers;
+  protected MemorySegment glDeleteRenderbuffers;
+  protected MemorySegment glDeleteFramebuffers;
+  
+  protected static int INT_SIZE = 4;
   
 
   public FBO_linux() {
-    init();
+    this(0, 0);
   }
 
   public FBO_linux(int width, int height) {
     this.width = width;
     this.height = height;
+    this.debug = Debug.check(FBO.class, FBO_linux.class);
     
     init();
   }
   
+  /** 
+   * Initialize pointers to OpenGL extensions allowing to perform offscreen rendering
+   */
   protected void init() {
-    ffm = new ForeignMemoryUtils(Mode.IMPLICIT);
+    classArena = Arena.ofShared();
     
     MemorySegment function;
-    MemoryAddress address;
     
     // glGenFramebuffers
-    function = ffm.alloc("glGenFramebuffersEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glGenFramebuffers = PFNGLGENFRAMEBUFFERSEXTPROC.ofAddress(address, ffm.getScope());
-    
+    function = classArena.allocateFrom("glGenFramebuffersEXT");
+    glGenFramebuffers = glx_h.glXGetProcAddress(function);
+        
     // glBindFramebuffer
-    function = ffm.alloc("glBindFramebufferEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glBindFramebuffer = PFNGLBINDFRAMEBUFFEREXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glBindFramebufferEXT");
+    glBindFramebuffer = glx_h.glXGetProcAddress(function);
     
     // glFramebufferTexture2D
-    function = ffm.alloc("glFramebufferTexture2DEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glFramebufferTexture2D = PFNGLFRAMEBUFFERTEXTURE2DEXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glFramebufferTexture2DEXT");
+    glFramebufferTexture2D = glx_h.glXGetProcAddress(function);
 
     // glGenRenderbuffers
-    function = ffm.alloc("glGenRenderbuffersEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glGenRenderbuffers = PFNGLGENRENDERBUFFERSEXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glGenRenderbuffersEXT");
+    glGenRenderbuffers = glx_h.glXGetProcAddress(function);
     
     // glBindRenderbuffer
-    function = ffm.alloc("glBindRenderbufferEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glBindRenderbuffer = PFNGLBINDRENDERBUFFEREXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glBindRenderbufferEXT");
+    glBindRenderbuffer = glx_h.glXGetProcAddress(function);
     
     // glRenderbufferStorage
-    function = ffm.alloc("glRenderbufferStorageEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glRenderbufferStorage = PFNGLRENDERBUFFERSTORAGEEXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glRenderbufferStorageEXT");
+    glRenderbufferStorage = glx_h.glXGetProcAddress(function);
     
     // glFramebufferRenderbuffer
-    function = ffm.alloc("glFramebufferRenderbufferEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glFramebufferRenderbuffer = PFNGLFRAMEBUFFERRENDERBUFFEREXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glFramebufferRenderbufferEXT");
+    glFramebufferRenderbuffer = glx_h.glXGetProcAddress(function);
     
     // glCheckFramebufferStatus
-    function = ffm.alloc("glCheckFramebufferStatusEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glCheckFramebufferStatus = PFNGLCHECKFRAMEBUFFERSTATUSEXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glCheckFramebufferStatusEXT");
+    glCheckFramebufferStatus = glx_h.glXGetProcAddress(function);
    
     // glDeleteRenderbuffers
-    function = ffm.alloc("glDeleteRenderbuffersEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glDeleteRenderbuffers = PFNGLDELETERENDERBUFFERSEXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glDeleteRenderbuffersEXT");
+    glDeleteRenderbuffers = glx_h.glXGetProcAddress(function);
     
     // glDeleteFramebuffers
-    function = ffm.alloc("glDeleteFramebuffersEXT");
-    address = glx_h.glXGetProcAddress(function);
-    glDeleteFramebuffers = PFNGLDELETEFRAMEBUFFERSEXTPROC.ofAddress(address, ffm.getScope());
+    function = classArena.allocateFrom("glDeleteFramebuffersEXT");
+    glDeleteFramebuffers = glx_h.glXGetProcAddress(function);
     
   }
   
-  // could avoid renewing buffers, but keep the same behaviour
-  // than macOS for now
-  boolean renewBuffers = true;
-
-  /** Prepare resources held by this FBO utility.*/
+  /** 
+   * Allocate memory segments required to perform offscreen rendering using the frame buffer object, unless resource have already been prepared.
+   * 
+   * All memory segments are freed by calling {@link #release(GL)}.
+   */
   @Override
   public void prepare(GL gl) {
     Debug.debug(debug, "FBO: from thread " + Thread.currentThread().getName());
     
     // Check that this happens in AWT event queue, otherwise skip rendering
     // to avoid opengl exception.
-    //if(!"AWT-EventQueue-0".equals(Thread.currentThread().getName()))
-    //  return;
+    /*if(!"AWT-EventQueue-0".equals(Thread.currentThread().getName())) {
+      System.err.println("FBO_linux: Not IN AWT THREAD");
+      return;
+    }*/
     
     if (prepared)
       release(gl);
 
-    // ---------------------------
-    // Transfert pixel Format
-    // ---------------------------
-    // Most GPU support BGRA
-    // If you supply GL_RGBA, then the driver may have to do the swapping for you which is slow.
-    // If you do use GL_BGRA, the call to pixel transfer will be much faster.
-    // Note that GL_BGRA pixel transfer format is only preferred when uploading to GL_RGBA8 images.
-    // When dealing with other formats, like GL_RGBA16, GL_RGBA8UI or even GL_RGBA8_SNORM, then the
-    // regular GL_RGBA
-    // ordering may be preferred.
-    //
-    // On which platforms is GL_BGRA preferred? Making a list would be too long but one example is
-    // Microsoft Windows.
-    // Note that with GL 4.3 or ARB_internalformat_query2, you can simply ask the implementation
-    // what is the
-    // preferred format with glGetInternalFormativ(GL_TEXTURE_2D, GL_RGBA8, GL_TEXTURE_IMAGE_FORMAT,
-    // 1, &preferred_format).
-    format = GL.GL_BGRA;
-    internalFormat = GL.GL_RGBA8;
-    textureType = GL.GL_UNSIGNED_BYTE;
-
+    prepareRenderArena();
+    
+    // transfert pixel Format
     Debug.debug(debug, "FBO.internalFormat : " + internalFormat + " (default GL.GL_RGBA8)");
     Debug.debug(debug, "FBO.format         : " + format + " (default GL.GL_BGRA)");
 
     // ------------------------
     // Generate TEXTURE buffer
 
-    if(idTexture<=0 || renewBuffers) {
-      textureBufferIds = MemorySegment.allocateNative(1 * 4 * 3, MemorySession.openImplicit());
-      gl.glGenTextures(1, textureBufferIds);
+    if(idTexture<=0) {
+      int nTextures = 1;
+      textureBufferIds = renderArena.allocate(nTextures * INT_SIZE * 1);
+      gl.glGenTextures(nTextures, textureBufferIds);
       idTexture = (int) textureBufferIds.get(ValueLayout.JAVA_INT, 0);
     }
     Debug.debug(debug, "FBO: Got texture ID : " + idTexture);
@@ -236,7 +201,7 @@ public class FBO_linux extends AFBO implements FBO {
     // Create a texture to write to
     int byteSize = width * height * channels;
     
-    pixelBuffer = MemorySegment.allocateNative(byteSize, MemorySession.openImplicit());
+    pixelBuffer = renderArena.allocate(byteSize);
     gl.glTexImage2D(GL.GL_TEXTURE_2D, level, internalFormat, width, height, border, format,
         textureType, pixelBuffer);
     
@@ -244,9 +209,10 @@ public class FBO_linux extends AFBO implements FBO {
     // -------------------------
     // Generate FRAME buffer
     
-    if (idFrameBuffer <= 0 || renewBuffers) {
-      frameBufferIds = MemorySegment.allocateNative(4, MemorySession.openImplicit());
-      glGenFramebuffers.apply(1, frameBufferIds.address());
+    if (idFrameBuffer <= 0) {
+      int nFramebuffers = 1;
+      frameBufferIds = renderArena.allocate(nFramebuffers * INT_SIZE);
+      PFNGLGENFRAMEBUFFERSEXTPROC.invoke(glGenFramebuffers, nFramebuffers, frameBufferIds);
       // replace >> glut_h.glGenFramebuffers(1, frameBufferIds);
       
       idFrameBuffer = (int) frameBufferIds.get(ValueLayout.JAVA_INT, 0);
@@ -259,18 +225,18 @@ public class FBO_linux extends AFBO implements FBO {
     }
 
     // Bind frame buffer
-    glBindFramebuffer.apply(glut_h.GL_FRAMEBUFFER(), idFrameBuffer);
+    PFNGLBINDFRAMEBUFFEREXTPROC.invoke(glBindFramebuffer, glut_h.GL_FRAMEBUFFER(), idFrameBuffer);
 
     // Attach 2D texture to this FBO
-    glFramebufferTexture2D.apply(glut_h.GL_FRAMEBUFFER_EXT(), glut_h.GL_COLOR_ATTACHMENT0_EXT(), GL.GL_TEXTURE_2D, idTexture, 0);
+    PFNGLFRAMEBUFFERTEXTURE2DEXTPROC.invoke(glFramebufferTexture2D, glut_h.GL_FRAMEBUFFER_EXT(), glut_h.GL_COLOR_ATTACHMENT0_EXT(), GL.GL_TEXTURE_2D, idTexture, 0);
 
     
     // -------------------------
     // Generate RENDER buffer
 
-    if(idRenderBuffer<=0 || renewBuffers) {
-      renderBufferIds = MemorySegment.allocateNative(4, MemorySession.openImplicit());
-      glGenRenderbuffers.apply(1, renderBufferIds.address());
+    if(idRenderBuffer<=0) {
+      renderBufferIds = renderArena.allocate(4);
+      PFNGLGENRENDERBUFFERSEXTPROC.invoke(glGenRenderbuffers, 1, renderBufferIds);
       idRenderBuffer = (int) renderBufferIds.get(ValueLayout.JAVA_INT, 0);
     }
     
@@ -280,20 +246,20 @@ public class FBO_linux extends AFBO implements FBO {
     Debug.debug(debug, "FBO: Got RenderBuffer ID : " + idRenderBuffer);
 
     // Bind render buffer
-    glBindRenderbuffer.apply(glut_h.GL_RENDERBUFFER_EXT(), idRenderBuffer);
-    glRenderbufferStorage.apply(glut_h.GL_RENDERBUFFER_EXT(), GL.GL_DEPTH_COMPONENT24, width, height);
+    PFNGLBINDRENDERBUFFEREXTPROC.invoke(glBindRenderbuffer, glut_h.GL_RENDERBUFFER_EXT(), idRenderBuffer);
+    PFNGLRENDERBUFFERSTORAGEEXTPROC.invoke(glRenderbufferStorage, glut_h.GL_RENDERBUFFER_EXT(), GL.GL_DEPTH_COMPONENT24, width, height);
 
     
     // -------------------------
     // Attach depth buffer to FBO
 
-    glFramebufferRenderbuffer.apply(glut_h.GL_FRAMEBUFFER_EXT(), glut_h.GL_DEPTH_ATTACHMENT_EXT(), glut_h.GL_RENDERBUFFER_EXT(), idRenderBuffer);
+    PFNGLFRAMEBUFFERRENDERBUFFEREXTPROC.invoke(glFramebufferRenderbuffer, glut_h.GL_FRAMEBUFFER_EXT(), glut_h.GL_DEPTH_ATTACHMENT_EXT(), glut_h.GL_RENDERBUFFER_EXT(), idRenderBuffer);
 
     
     // -------------------------
     // Does the GPU support current FBO configuration?
 
-    int status = glCheckFramebufferStatus.apply(glut_h.GL_FRAMEBUFFER_EXT());
+    int status = PFNGLCHECKFRAMEBUFFERSTATUSEXTPROC.invoke(glCheckFramebufferStatus, glut_h.GL_FRAMEBUFFER_EXT());
 
     if (status != glut_h.GL_FRAMEBUFFER_COMPLETE_EXT()) {
       throw new RuntimeException("Incomplete framebuffer, not supporting current FBO config : "
@@ -303,7 +269,7 @@ public class FBO_linux extends AFBO implements FBO {
     // -------------------------
     // and now you can render to GL_TEXTURE_2D
     
-    glBindFramebuffer.apply(glut_h.GL_FRAMEBUFFER(), idFrameBuffer);
+    PFNGLBINDFRAMEBUFFEREXTPROC.invoke(glBindFramebuffer, glut_h.GL_FRAMEBUFFER(), idFrameBuffer);
     
     gl.glClearColor(0.0f, 0.0f, 0.0f, 0.0f);
     gl.glClearDepth(1.0f);
@@ -312,50 +278,35 @@ public class FBO_linux extends AFBO implements FBO {
     // Mark as prepared
     prepared = true;
 
-    Debug.debug(debug, "FBO: Prepared!");
+    Debug.debug(debug, "FBO: Prepared a " + width + "x" + height);
   }
-
-  protected void diagnoseError(GL gl, String item) {
-    GLError e = GLError.get(gl);
-
-    if (e != null) {
-      e.throwRuntimeException();
-    } else {
-      System.err.println("FBO: " + item
-          + " handle=0 but get no OpenGL error. This may happen if the call was not issued from AWT thread on linux");
-    }
-    // https://stackoverflow.com/questions/2985034/glgentextures-keeps-returing-0s
-  }
+  
 
   /** Release resources held by this FBO utility.*/
   @Override
   public void release(GL gl) {
-    if(!renewBuffers)
-      return ;
+    // Skip release step if the FBO wasn't prepared
+    if(!prepared)
+      return;
     
     // Delete resources
     gl.glDeleteTextures(1, textureBufferIds);
-    glDeleteRenderbuffers.apply(1, renderBufferIds.address());
+    PFNGLDELETERENDERBUFFERSEXTPROC.invoke(glDeleteRenderbuffers, 1, renderBufferIds);
     
     // Bind 0, which means render to back buffer, as a result, fb is unbound
-    glBindFramebuffer.apply(glut_h.GL_FRAMEBUFFER(), 0);
+    PFNGLBINDFRAMEBUFFEREXTPROC.invoke(glBindFramebuffer, glut_h.GL_FRAMEBUFFER(), 0);
  
-    glDeleteFramebuffers.apply(1, frameBufferIds.address());
+    PFNGLDELETEFRAMEBUFFERSEXTPROC.invoke(glDeleteFramebuffers, 1, frameBufferIds);
 
-    // TODO : requires shared scope to support unload
-    boolean unload = false;
-    if(unload) {
-      textureBufferIds.unload(); 
-      renderBufferIds.unload(); 
-      frameBufferIds.unload();
-      pixelBuffer.unload();
-    }
-
+    // Free memory
+    releaseRenderArena();
+    
     prepared = false;
 
     Debug.debug(debug, "FBO: Resources released !");
   }
   
+  /** Return all pixels. Their lifetime is bounded to the {@link #renderArena}. */
   @Override
   public MemorySegment readPixels(GL gl) {
     // Initialize buffers if they are not ready or if their expected size changed
@@ -366,9 +317,9 @@ public class FBO_linux extends AFBO implements FBO {
     int nBytes = width * height * channels;
     
     // The segments created in this function will be destroyed
-    // one the below scope and allocator are collected by GC.
+    // once they are collected by GC.
     if(pixels==null || pixels.byteSize()!=nBytes) {
-      pixels = MemorySegment.allocateNative(nBytes, session);
+      pixels = renderArena.allocate(nBytes);
     }
 
     gl.glReadPixels(0, 0, width, height, format, textureType, pixels);
@@ -383,12 +334,9 @@ public class FBO_linux extends AFBO implements FBO {
     return pixels;
   }
 
-  protected MemorySession session = MemorySession.openImplicit();
-  protected MemorySegment pixels;
-  
   protected void unbindFramebuffer() {
     // Bind 0, which means render to back buffer
-    glBindFramebuffer.apply(glut_h.GL_FRAMEBUFFER(), 0);    
+    PFNGLBINDFRAMEBUFFEREXTPROC.invoke(glBindFramebuffer, glut_h.GL_FRAMEBUFFER(), 0);    
   }
 
 }
